--- a/k8s/django-service.yml
+++ b/k8s/django-service.yml
@@ -5,8 +5,8 @@ metadata:
 spec:
   selector:
     app: django-app
+  type: LoadBalancer
   ports:
-    - protocol: TCP
-      port: 80
+    - port: 5005
       targetPort: 5005
-  type: ClusterIP
+
