--- a/k8s/flask-service.yml
+++ b/k8s/flask-service.yml
@@ -5,8 +5,7 @@ metadata:
 spec:
   selector:
     app: flask-app
+  type: LoadBalancer
   ports:
-    - protocol: TCP
-      port: 8080
+    - port: 8080
       targetPort: 8080
-  type: ClusterIP
